<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="recent_entries">↑ Recent Entries</string>
    <string name="news">News</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="clear">clear</string>
    <string name="no_intent">no_such_intention</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign_up</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_out">sign_out</string>
    <string name="password_hint">password</string>
    <string name="login_hint">login</string>
    <string name="enter">enter</string>
    <string name="enter_button">войти</string>
    <string name="name">name</string>
    <string name="confirmpassword">confirmPassword</string>
    <string name="registration">registration</string>
    <string name="log_out">logOut</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="authentication">authentication</string>
    <string name="authenticate_now">Do you want to authenticate now?</string>
    <string name="cancel">_cancel</string>
    <string name="Password_mismatch">Password mismatch</string>
    <string name="NoInternet">No Internet</string>
    <string name="register">Register</string>
    <string name="Button_pressed">Button pressed</string>
    <string name="network_error">network error</string>
    <string name="retry">retry</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="last_week">last week</string>

</resources>