<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_button_min_size"
        android:layout_marginTop="@dimen/common_spacing"
        android:autofillHints="username"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/login"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_button_min_size"
        android:autofillHints="userlogin"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_button_min_size"
        android:layout_marginTop="@dimen/common_spacing"
        android:autofillHints="password"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_button_min_size"
        android:layout_marginTop="@dimen/common_spacing"
        android:autofillHints="confirmPassword"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_button_min_size"
        android:layout_marginTop="@dimen/common_spacing"
        android:elevation="4dp"
        android:text="@string/register"
        android:textColor="#FFFB05"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        />


</androidx.constraintlayout.widget.ConstraintLayout>