<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@drawable/custom_scrollbar"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/scrollTop"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/icon_scroll_top"
        app:layout_constraintBottom_toTopOf="@id/fab"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:layout_constraintStart_toStartOf="@+id/fab"
        android:contentDescription="scroll_top" />

    <TextView
        android:id="@+id/button_scroll"
        android:layout_width="160dp"
        android:layout_height="28dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:text="@string/recent_entries"
        android:textColor="#FFF"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/buttonNews"-->
    <!--        android:layout_width="120dp"-->
    <!--        android:layout_height="24dp"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:gravity="center"-->
    <!--        android:text="@string/news"-->
    <!--        android:textColor="#000"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <ImageView
        android:id="@+id/bell"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/icon_bell"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countPost"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/circle_background"
        android:gravity="center"
        android:text=""
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/bell"
        app:layout_constraintEnd_toEndOf="@+id/bell"
        app:layout_constraintStart_toStartOf="@+id/bell"
        app:layout_constraintTop_toTopOf="@+id/bell"
        app:layout_goneMarginStart="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="@string/add_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

